# stinger

./: CMakeLists.txt
lib/stinger_alg/: CMakeLists.txt
lib/stinger_alg/betweenness/inc/: betweenness.h  dynamic_betweenness.h
lib/stinger_alg/betweenness/src/: betweenness.c  dynamic_betweenness.cpp
lib/stinger_alg/bfs/inc/: dynamic_bfs.h
lib/stinger_alg/bfs/src/: dynamic_bfs.cpp
lib/stinger_alg/common/inc/: streaming_algorithm.h
lib/stinger_alg/inc/: streaming_algorithm.h  streaming_betweenness.h  streaming_clustering.h  streaming_kcore.h
lib/stinger_alg/kcore/src/: dynamic_kcore.cpp
lib/stinger_alg/pagerank/inc/: streaming_pagerank.h
lib/stinger_alg/pagerank/src/: dynamic_pagerank.cpp
lib/stinger_alg/simple_communities/inc/: streaming_simple_communities.h  streaming_simple_communities_update.h  streaming_simple_communities_updating.h
lib/stinger_alg/simple_communities/src/: community.c  dynamic_simple_communities_updating.cpp  streaming_simple_communities.cpp  streaming_simple_communities_update.cpp  streaming_simple_communities_updating.cpp
lib/stinger_alg/src/: streaming_betweenness.cpp  streaming_clustering.cpp  streaming_kcore.cpp  streaming_pagerank.cpp
lib/stinger_alg/static_components/src/: dynamic_static_components.cpp
lib/stinger_alg/streaming_connected_components/inc/: dynamic_streaming_connected_components.h
lib/stinger_alg/streaming_connected_components/src/: dynamic_streaming_connected_components.cpp
lib/stinger_core/: CMakeLists.txt
lib/stinger_core/inc/: stinger_batch_insert.h  stinger_traversal.h
lib/stinger_core/src/: stinger.c
lib/stinger_net/: CMakeLists.txt
lib/stinger_net/inc/: stinger_alg.h  stinger_alg_client.h
lib/stinger_net/src/: stinger_alg_client.cpp
lib/stinger_utils/: CMakeLists.txt
src/clients/algorithms/: CMakeLists.txt
src/clients/algorithms/betweenness/src/: betweenness.cpp
src/clients/algorithms/clustering_coefficients/src/: clustering.cpp
src/clients/algorithms/kcore/src/: kcore.cpp
src/clients/algorithms/pagerank/src/: pagerank.cpp
src/clients/algorithms/simple_communities/src/: simple_communities.cpp  simple_communities_updating.cpp
src/tests/stinger_core_test/: stinger_core_test.cpp
